--- a/index.html
+++ b/index.html
@@ -11,10 +11,24 @@
 
 <body>  
     <Header class="container">
-        HEADER
+        <img src="./img/logo.png" alt="logo">
+        <nav class="menu">
+            <a href="">Home</a>
+            <a href="">Smoothies</a>
+            <a href="">Contact Us</a>
+        </nav>
+        <nav class="icons">
+            <a href="" class="fa fa-shopping-basket"></a>
+            <a href="" class="fa fa-search"></a>
+        </nav>
     </Header>
     <main class="container">
-        MAIN CONTENT
+        <div class="gallery">
+            <img src="./img/drink.png" alt="drink">
+        </div>
+        <div>
+            About Item
+        </div>
     </main>
 </body>
 
