--- a/index.html
+++ b/index.html
@@ -18,17 +18,52 @@
             <a href="">Contact Us</a>
         </nav>
         <nav class="icons">
-            <a href="" class="fa fa-shopping-basket"></a>
-            <a href="" class="fa fa-search"></a>
+            <a href="#" class="fa fa-shopping-basket"></a>
+            <a href="#" class="fa fa-search"></a>
         </nav>
+        <i class="fa fa-bars hamburger"></i>
     </Header>
     <main class="container">
         <div class="gallery">
             <img src="./img/drink.png" alt="drink">
+            <i class="fa fa-angle-left"></i>
+            <i class="fa fa-angle-right"></i>
         </div>
-        <div>
-            About Item
+        <div class="text">
+            <p class="category">Berries</p>
+            <h1 class="title">Strawberry rush</h1>
+            <p class="description">The best blend of strawberries, rasberries and mulberries</p>
+            <div class="contains">
+                <div class="list">
+                    <h2 class="list-title">Nutrition benefits</h2>
+                    <ul>
+                        <li>Vitamin A</li>
+                        <li>Vitamin C</li>
+                        <li>Citric acid</li>
+                    </ul>
+                </div>
+            </div>
+        
+            <div class="list">
+                 <h2 class="list-title">Content</h2>
+                 <ul>
+                    <li>
+                        <img src="./img/braske.png" alt="">
+                    </li>
+                    <li>
+                        <img src="./img/aviete.png" alt="">
+                    </li>
+                    <li>
+                        <img src="./img/gervuoge.png" alt="">
+                    </li>
+                </ul>
+            </div>
         </div>
+        <form>
+            <input type="hidden" value="strawberry-rush" name="selected-item" id="selected-item">
+            <button>
+            </button>
+        </form>
     </main>
 </body>
 
