initial content style selectors

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <form>
             <input type="hidden" value="strawberry-rush" name="selected-item" id="selected-item">
-            <button>
+            <button type="submit">Add to cart
             </button>
         </form>
     </main>
